--- a/src/styles.css
+++ b/src/styles.css
@@ -107,7 +107,8 @@ body {
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji;
-  background: #cacaca;
+  background-color: #cacaca;
+  transition: background-color 0.3s;
 }
 
 label {
